--- a/preamble/special.tex
+++ b/preamble/special.tex
@@ -1,1 +1,7 @@
+\newcommand{\timefull}{\tau_{\text{полн}}}
+\newcommand{\timeexec}{\tau_{\text{исполн}}}
+\newcommand{\timewait}{\tau_{\text{ожид}}}
 
+\newcommand{\ganttpbar}[4]{%
+  \ganttbar[bar/.append style = { fill = #1 }]{#2}{#3}{#4}%
+}
