--- a/01/02.tex
+++ b/01/02.tex
@@ -1,5 +1,5 @@
 \subsection{%
-  Лекция \texttt{24.??.??}.%
+  Лекция \texttt{24.02.14}.%
 }
 
 Как уже было сказано на предыдущей лекции, для эффективного использования
