--- a/preamble/special.tex
+++ b/preamble/special.tex
@@ -2,6 +2,11 @@
 \newcommand{\timeexec}{\tau_{\text{исполн}}}
 \newcommand{\timewait}{\tau_{\text{ожид}}}
 
+\newcommand{\exectime}{\texttt{execution\_time}}
+\newcommand{\maxexectime}{\texttt{max\_execution\_time}}
+
 \newcommand{\ganttpbar}[4]{%
   \ganttbar[bar/.append style = { fill = #1 }]{#2}{#3}{#4}%
 }
+
+\newcommand{\ar}[1]{(п.а. #1)}
