--- a/01/03.tex
+++ b/01/03.tex
@@ -1,5 +1,5 @@
 \subsection{%
-  Лекция \texttt{24.??.??}.%
+  Лекция \texttt{24.02.21}.%
 }
 
 Цель существования современной операционной системы заключается в том, что она
